web/public/css/app.css
body {
  background: url(../img/bg_11.png) #c6c8cd top left repeat-x;
}

/* jQuery UI font override */
.ui-widget { font-family: 'Trebuchet MS',Arial,sans-serif !important; font-size: 1.1em; }
.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: 'Lucida Grande', 'Trebuchet MS', Arial,sans-serif !important; font-size: 1em; } 
.ui-button, .ui-dialog .ui-dialog-buttonpane button,
.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a {
  cursor: default !important;
}

a, a:visited {
  color: #002D5A;
  text-decoration: none;
  font-weight: bold;
}

a:hover, a:active {
  color: #636363;
}

img {
  border: 0;
  background-color: transparent;
  border-radius: 0.;
  -moz-border-radius: 0;
  -webkit-border-radius: 0;
}

.logintitle {
  text-align: center;
  font-family: Ubuntu, Verdana, sans-serif;
}

.logintitle img, .logintitle h1 {
  display: inline;
  vertical-align: bottom;
}


.loginform {
  margin: 5% auto;
  text-align: center;
  width: 430px;
}

.loginform .loginform_fields {
  margin: 0.7em;
  padding: 1em;
}

.loginerrors {
  width: 400px;
  margin: 5% auto 0 auto;
}

.uniForm .ctrlHolder{ padding: .3em; }
.uniForm textarea    { height: 6em; }
.uniForm label { float: left; width: 30%; }
.uniForm .ultrasmall { width: 20% !important; }
.uniForm .small { width: 30% !important; }
.uniForm .medium{ width: 45% !important; }
.uniForm .large { width: 60% !important; } 
.uniForm .auto  { width: auto !important; height: auto !important; }
.uniForm .small,
.uniForm .ultrasmall,
.uniForm .medium,
.uniForm .auto{ margin-right: 4px; }
.uniForm:after,
.uniForm .ctrlHolder:after {content: "."; display: block; height: 0; line-height: 0; font-size: 0; clear: both; min-height: 0; visibility: hidden; }

span.username {
  padding-left: 20px;
  background: url(../img/user.png) transparent left center no-repeat;
}

#sidebar {
  max-width: 200px;
  min-width: 150px;
}

#calendar_view {
  min-width: 800px;
}

#footer {
  text-align: center;
}

#footer p {
  color: #777777;
}

label.suboption {
  padding-left: 0.8em;
}

div.block {
  position: relative;
  margin: 0 auto 5% auto;
}

div.block .ui-widget-header {
  padding: 0.4em 1em 0.3em 1em;
}

div#logo {
  text-align: center;
}

div.block div.links {
  text-align: right;
}

div.block div.links span.item {
  display: inline-block;
  padding: 10px;
}

div.block div.links span.item:hover {
  background-color: #f0f0f0;
}

.calendar_list ul, #calendar_list li {
  list-style: none;
  cursor: default;
  padding: 0;
  margin: 0;
}

.calendar_list li {
  width: inherit;
  overflow: hidden;
  white-space: nowrap;
  padding: 4px;
}

.calendar_list li span.text {
  font-size: 0.9em;
  letter-spacing: -0.1em;
}

.calendar_list li:hover {
  background-color: #f0f0f0;
}

li.selected_calendar {
  font-weight: bold;
}

li.selected_calendar div.calendar_color {
  border: 2px solid red;
  width: 10px !important;
  height: 10px !important;
}

div.ui-dialog-content table {
  width: 100%;
  max-width: 100%;
}

div.ui-dialog-content table td,
div.ui-dialog-content table th {
  padding: 4px;
  vertical-align: top;
  text-align: left;
  line-height: 14px;
}

/* Loadmask starts */
.loadmask {
    z-index: 100;
    position: absolute;
    top:0;
    left:0;
    -moz-opacity: 0.5;
    opacity: .50;
    filter: alpha(opacity=50);
    background-color: #CCC;
    width: 100%;
    height: 100%;
    zoom: 1;
}
.loadmask-msg {
    z-index: 20001;
    position: absolute;
    top: 0;
    left: 0;
    border:1px solid #6593cf;
    background: #c3daf9;
    padding:2px;
}
.loadmask-msg div {
    padding:5px 10px 5px 25px;
    background: #fbfbfb url('../img/loading.gif') no-repeat 5px 5px;
    line-height: 16px;
	border:1px solid #a3bad9;
    color:#222;
    font:normal 11px tahoma, arial, helvetica, sans-serif;
    cursor:wait;
}
.masked {
    overflow: hidden !important;
}
.masked-relative {
    position: relative !important;
}
.masked-hidden {
    visibility: hidden !important;
}

/* Loadmask end */

/* Freeow starts */

/* Outermost Container */
.freeow {
    position: fixed;
    width: 300px;
    z-index: 9999;  
}
.freeow-top-right {
    top: 40px;
    right: 10px; 
}
/* Message */
.freeow > div {
    position: relative;
    margin-bottom: 5px;
	cursor: pointer;
}
.freeow .content {
    margin: 5px 5px 5px 69px;
}
.freeow h2,
.freeow p {
    margin: 0;
    padding: 0;

}
.freeow .icon {
    position: absolute;
    display: block;
    width: 48px;
    height: 48px;
    top: 5px;
    left: 10px;
    z-index: 1;
}



.freeow .close {
    position: absolute;
    display: block;
    width: 24px;
    height: 24px;
    top: 8px;
    left: 8px;
    background: none;
    z-index: 2;
}
.freeow div:hover .close {
    background: transparent url(../img/close.png) no-repeat 0 0;
}

.freeow .popup_success,
.freeow .popup_error {
	color: white;
}
.freeow .popup_error .background,
.freeow .popup_success .background {
    -moz-border-radius: 12px;
	border-radius: 12px;
    opacity: .80;
    -moz-box-shadow: 2px 2px 3px #888;
    -webkit-box-shadow: 2px 2px 3px #888;
    box-shadow: 2px 2px 3px #888;
}


.freeow .popup_error .background {
    border: 3px solid #E27782;
    background: #9A1120;
}

.freeow .popup_success .background {
    border: 3px solid #33AC00;
    background: #2F7013;
}

.freeow .popup_error:hover .background {
    border-color: #77121D;
}

.freeow .popup_success:hover .background {
    border-color: #1A390D;
}
.freeow .popup_success .content,
.freeow .popup_error .content {
    margin: 5px 5px 5px 69px;
}
.freeow .popup_success h2,
.freeow .popup_error h2 {
    font-family: "Lucida Grande", Helvetica, arial, sans-serif;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
}
.freeow .popup_success p,
.freeow .popup_error p {
    padding-top: 8px;
    font-family: Helvetica, arial, sans-serif;
    font-weight: normal;
    font-size: 11px;
    line-height: 16px;
}

.freeow .popup_error .icon {
    background: transparent url(../img/freeow-notice.png) no-repeat 0 0;
}

.freeow .popup_success .icon {
    background: transparent url(../img/Ok.png) no-repeat 0 0;
}

/* Freeow ends */

/* overlay starts */

#view_event_details_template, #share_calendar_manager_row_template {
  display: none;
}

.view_event_details {
  width: 400px !important;
  max-width: 400px !important;
}

.view_event_details .label {
  font-weight: bold;
}

.view_event_details p.start_and_finish {
  font-style: italic;
}

.view_event_details .ui-tooltip-content div {
  margin-bottom: 1.7em;
  line-height: 1.5em;
}

.view_event_details .description_value {
  margin-left: 2em;
  font-family: monospace;
  max-height: 150px;
  width: 90%;
  overflow: auto;
}

.view_event_details span.rrule_raw_value {
  font-family: monospace;
}


.view_event_details .actions {
  text-align: right;
}

.view_event_details .ui-tooltip-content {
  line-height: 150%;
  padding: 0.5em 2em 0.5em 2em !important;
}

.view_event_details .ui-tooltip-title {
  font-size: 120%;
}

/* overlay ends */

#delete_event_dialog .title {
  font-size: 120%;
  font-style: italic;
}

#delete_event_dialog .calendar {
  font-style: italic;
}

/* delete event dialog ends */

.time-picker {
  z-index: 9999 !important;
}

#ui-datepicker-div {
  z-index: 9999 !important;
}

/* colorPicker starts */
div.color_picker {
  float: left;
  height: 16px;
  width: 32px;
  padding: 0 !important;
  border-width: 0;
  background: url(../img/arrow_colorpicker.gif) no-repeat top right;
  cursor: pointer;
  line-height: 16px;
}

div#color_selector {
  width: 180px;
  position: absolute;
  border-width: 0;
  background-color: #EFEFEF;
  padding: 2px;
  z-index: 9999;
}
  div#color_custom {width: 100%; float:left }
  div#color_custom label {font-size: 95%; color: #2F2F2F; margin: 5px 2px; width: 25%}
  div#color_custom input {margin: 5px 2px; padding: 0; font-size: 95%; border: 1px solid #ccc; width: 65%; }

div.color_swatch {
  height: 24px;
  width: 24px;
  border-width: 0;
  margin: 2px;
  float: left;
  cursor: pointer;
  line-height: 12px;
}
/* colorPicker ends */

div.public_url {
  width: 90%;
  text-align: right;
  font-size: 80%;
  margin-top: 1em;
}

#comm {
  display: none;
}

span.shared {
  display: inline-block;
  height: 16px;
  width: 16px;
  padding-left: 5px;
  background-image: url(../img/share.png);
  background-position: 95% 50%;
  background-repeat: no-repeat;
}

div.share_info {
  background: url(../img/share_big.png) #fafafa center left no-repeat;
  padding: 10px 10px 10px 40px;
  border: 1px solid #e0e0e0;
  width: 350px;
  margin: 0.5em auto 0 auto;
}

/* 
 * Dialog buttons
 * --------------
 */
.btn-icon-cancel {
  background-image: url(../img/button-icons/cancel.png) !important;
}

.btn-icon-ok {
  background-image: url(../img/button-icons/ok.png) !important;
}

.btn-icon-event-delete, .btn-icon-calendar-delete {
  background-image: url(../img/button-icons/calendar_delete.png) !important;
}

.btn-icon-calendar-add {
  background-image: url(../img/button-icons/calendar_add.png) !important;
}

.btn-icon-event-edit, .btn-icon-calendar-edit {
  background-image: url(../img/button-icons/calendar_edit.png) !important;
}

.fc-border-separate td {
  border-color: #cbcbcb !important;
}

.fc-border-separate th.fc-first,
.fc-border-separate td.fc-first {
  border-left: 1px solid #b6b6b6 !important;
}

.fc-border-separate th.fc-last,
.fc-border-separate td.fc-last {
  border-right: 1px solid #b6b6b6 !important;
}

td.fc-other-month {
  background-color: #f9f9f9;
  border-style: dotted;
  border-color: #bfbfbf;
}

td.fc-sat, td.fc-sun {
  background-color: #eaeaea;
}

td.fc-today {
  background-color: #FFFFCC !important;
  font-weight: bold;
  border: 2px solid #D2D267;
}

div.selecthelper {
  opacity: 0.5;
  filter: alpha(opacity = 50);
  zoom: 1;
}

.fc-button {
  cursor: default !important;
}

.fc-event .fc-event-inner {
  font-size: 1.1em !important;
}

.fc-event-hori .fc-event-inner {
  padding: 0.1em 0 0.2em 0;
}

div.calendar_color {
  display: inline-block;
  width: 12px;
  height: 12px;
  margin-right: 6px;
  border-width: 1px;
  border-style: solid;
}

div.pseudobutton,
img.pseudobutton {
  padding: 10px;
}

div.pseudobutton:hover,
img.pseudobutton:hover {
  background-color: #f0f0f0;
}

table.share_calendar_manager tr td,
table.share_calendar_manager_new tr td {
  vertical-align: middle;
}

tr.share_calendar_manager_empty td {
  text-align: center !important;
  display: none;
}

table.share_calendar_manager_new {
  margin-top: 10px;
  border: 1px solid #e0e0e0;
  background-color: #f6f6f6;
}

